networkpolicy/networkpolicy__basic_kafka_setup__minio__exception__system__egress__ports__443__nr19__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio--exception--system--egress--ports--443--nr19
  namespace: minio
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443
